# onset-fingerprinting

./: .gitignore  README.org  pyproject.toml  setup.py
notebooks/: 2-channel_lat.org  coordinate_system.org  data.org  dataset_draft.org  dataset_spec_draft.org  mesh_data.org  mining_mc_hits.org  modelling_lags.org  refresh.org
onset_fingerprinting/: ARenvelope.c  calibration.py  choose_od_settings.py  cross_corr.c  data.py  detection.py  echolocation.py  envelope_follower.c  model.py  modify_hits.py  modify_hits_mc.py  multilateration.py  plots.py  train.py  utils.py
onset_fingerprinting/c/: circular_array.h  cross_corr.c  test.py
onset_fingerprinting/realtime/: actions.py  audio.py  config.py  main.py  recording.py
